2015-07-15 Martin Grønholdt

* Makefile: Added flashfs to only flash file system.
*		   (checkdirs): Added some missing directories.
* fs/index.html: Created on/of button.
* fs/admin.html: Removed file.
* rest/net-passwd.c(rest_net_passwd_put_handler): Proper handling of states.
*												: Process response at HTTP_STATE_ASSEMBLED to print CLF:
* rest/network.c (rest_network_put_handler): Proper handling of states.
*										   : Process response at HTTP_STATE_ASSEMBLED to print CLF:
* user_main.c (connected): Don't repeat message.
* net/wifi_connect.c (print_status): Nicer output.
* user_config.h: Fixed scope of db_mem_list and rearranged a bit.
* slighttp/http-common.c (print_clf_status): Renamed http_print_clf_status and reimplemented.
* slighttp/http-common.h: Changed renamed and changed print_clf_status as http_print_clf_status.
* slighttp/http.h (http_response): Added message_size.
* slighttp/http-response.c: Added 405 status.
* 			               (http_process_response): Print CLF log to serial port.
* slighttp/http-response.h: Added 405 status.
* rest/gpio.c: Reading of an individual GPIO's status.
*			 : Setting of an individual GPIO's status.
*			  (rest_gpio_put_handler): Proper handling of states.
*									 : Process response at HTTP_STATE_ASSEMBLED to print CLF:


2015-07-14 Martin Grønholdt

* rest/net-names.c (rest_net_names_test): Incomprehensible debug output.
*				   (rest_net_names_destroy): If debugging, tell that we're here.
* rest/gpio.c: Listing of usable GPIO's work.
*			  (rest_gpio_test): Check for actual GPIO number before accepting.
*			  (rest_gpio_destroy): If debugging, tell that we're here.
* response_handlers.h: Added GPIO rest functions.
* rest/rest.h: Added GPIO rest functions.
* user_config.h: Added REST_GPIO_ENABLED.


2015-07-13 Martin Grønholdt

* rest/gpio.c: Added file.
*			   Added json_create_int_array.
* rest/rest.c: Added file.
* 			   Added rest_init.
* rest/rest.h: Added rest_init.


2015-07-10 Martin Grønholdt
