@@ -72,11 +72,14 @@ size_t ICACHE_FLASH_ATTR rest_net_passwd_put_handler(struct http_request *reques
     
 	if (request->response.state == HTTP_STATE_STATUS)
 	{
-		ret = http_send_status_line(request->connection, 204);
+		request->response.status_code = 204;
+		ret = http_send_status_line(request->connection, request->response.status_code);
 		request->response.state = HTTP_STATE_HEADERS;
 	}
 	else if (request->response.state == HTTP_STATE_HEADERS)
 	{
+		ret = http_send_header(request->connection, "Connection", "close");
+		ret += http_send_header(request->connection, "Server", HTTP_SERVER_NAME);
 		ret += http_send(request->connection, "\r\n", 2);		
 				request->response.state = HTTP_STATE_MESSAGE;
 	}
@@ -119,6 +122,8 @@ size_t ICACHE_FLASH_ATTR rest_net_passwd_put_handler(struct http_request *reques
  */
 void ICACHE_FLASH_ATTR rest_net_passwd_destroy(struct http_request *request)
 {
+	debug("Freeing network password REST handler data.\n");
+	
 	if (request->response.context)
 	{
 		db_free(request->response.context);
