@@ -87,7 +87,7 @@
 /**
  * @brief Mostly shut up output from the SDK.
  */
-//#define SDK_DEBUG
+#define SDK_DEBUG
 
 /**
  * @brief Customised print function.
